A few corrections made to some code comments.
Signed-off-by: Goriola Adio <goriadio@yahoo.com>

--- a/NN Model for Car Price Prediction/Neural Network Model for Car Price Prediction.ipynb
+++ b/NN Model for Car Price Prediction/Neural Network Model for Car Price Prediction.ipynb
@@ -1113,10 +1113,10 @@
     "## Let's now begin using a Neural Network model to solve this car price prediction problem.\n",
     "Identifying Our Key Variables:\n",
     "\n",
-    "Readied dataset = final_data\n",
-    "Train Inputs (Scaled) = x_train_scaled\n",
-    "Train Targets         = y_train\n",
-    "Test Inputs           = x_test\n",
+    "Readied dataset = final_data,\n",
+    "Train Inputs (Scaled) = x_train_scaled,\n",
+    "Train Targets         = y_train,\n",
+    "Test Inputs           = x_test,\n",
     "Test Targets          = y_test"
    ],
    "metadata": {
@@ -1822,7 +1822,7 @@
     }
    ],
    "source": [
-    "# The first column we want to add is the difference between the predicted prices and the actual prices:\n",
+    "# The first column we want to add is the absolute difference between the predicted prices and the actual prices:\n",
     "difference = pd.DataFrame(abs(comparison[0] - comparison[1]))\n",
     "difference"
    ],
@@ -2137,7 +2137,7 @@
     }
    ],
    "source": [
-    "# Computing difference between the predicted prices and the actual prices:\n",
+    "# Computing the absolute difference between the predicted prices and the actual prices:\n",
     "difference_test = pd.DataFrame(abs(comparison_test[0] - comparison_test[1]))\n",
     "difference_test"
    ],
